# ec800-andSTM32-and-aly

./: .gitignore  CMakeLists.txt  README.md  STM32F103XX_FLASH.ld  startup_stm32f103xb.s
Core/Inc/: adc.h  gpio.h  i2c.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  usart.h
Core/Src/: adc.c  gpio.c  i2c.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c  tim.c  usart.c
